--- a/unit_1/css/style.css
+++ b/unit_1/css/style.css
@@ -20,6 +20,6 @@ p, a {
     font-family: 'Geo', sans-serif;
     line-height: 1.5;
     letter-spacing: 1px;
-    color: black;
+    color: teal;
     text-decoration: none;
 }
