--- a/unit_4/css/style.css
+++ b/unit_4/css/style.css
@@ -1,13 +1,3 @@
-body {
-	background-color: #F5F5F5;
-  text-align: center;
-	text-transform: uppercase;
-  font-size: 18px;
-  margin-left: 40px;
-  margin-right: 40px;
-  padding: 20px;
-}
-
 @font-face {
   font-family: 'Metrica-Regular';
   src: url('Metrica-Regular.eot');
@@ -31,48 +21,71 @@ body {
   font-weight: normal;
   font-style: normal;
 }
-
+* { margin:0; padding:0; box-sizing:border-box; }
+body {
+	background-color: #F5F5F5;
+	color: #8F8F8F;
+	text-align: center;
+	text-transform: uppercase;
+	font-size: 18px;
+	font-family: 'Abel', sans-serif;
+}
+footer {
+  clear:both;
+  padding:2em 0;
+}
+section {
+	clear:both;
+}
+nav {
+  word-spacing: 5px;
+  margin-top: 2em;
+}
+a {
+  color: #8F8F8F;
+  text-decoration: none;
+}
 h1 {
   font-family: 'Metrica-Regular';
   letter-spacing: 8px;
   font-size: 80px;
-  color: #8F8F8F;
-  text-decoration: none;
 }
-
-nav {
-  word-spacing: 20px;
-  color: #8F8F8F;
+h2 {
+	padding: 2em 0;
+}
+p {
+	margin:1em 0;
+}
+img {
+	display:block;
+	margin-bottom:2em;
+	width: 100%;
+	box-shadow: .5em .5em .5em #8F8F8F;
 }
 
 .preview {
-    background-color: #F5F5F5;
     box-shadow: .5em .5em .5em #8F8F8F;
-    float: center;
-    margin: 2em;
-    width: 35%;
+    float: left;
+    margin: .5%;
+    width: 49%;
 }
-
 .intro {
-  word-spacing: 10px;
+  word-spacing: 5px;
 }
-
 #slogan {
   font-family: 'POLYARegular-Regular';
   font-size: 90px;
-  line-height: 1.5em;
+  line-height: 1.3;
   text-align: right;
-  color: black;
+  color: #fff;
+  float:right;
 }
-
-h3, p, a {
-  font-family: 'Abel', sans-serif;
-  line-height: 2em;
-  letter-spacing: 1px;
-  color: #8F8F8F;
-  text-decoration: none;
+#slogan * {
+	display:inline;
+	background:#000;
 }
-
-img {
-  width: 75%;
+.wrapper {
+	max-width: 70em;
+	margin:auto;
+	padding: 0 .5em;
 }
