--- a/unit_4/css/style.css
+++ b/unit_4/css/style.css
@@ -29,6 +29,7 @@ body {
 	text-transform: uppercase;
 	font-size: 18px;
 	font-family: 'Abel', sans-serif;
+  letter-spacing: 1px;
 }
 footer {
   clear:both;
@@ -39,7 +40,7 @@ section {
 }
 nav {
   word-spacing: 5px;
-  margin-top: 2em;
+  margin-bottom: 2em;
 }
 a {
   color: #8F8F8F;
@@ -60,6 +61,7 @@ img {
 	display:block;
 	margin-bottom:2em;
 	width: 100%;
+  border: 10px;
 	box-shadow: .5em .5em .5em #8F8F8F;
 }
 
@@ -75,7 +77,7 @@ img {
 #slogan {
   font-family: 'POLYARegular-Regular';
   font-size: 90px;
-  line-height: 1.3;
+  line-height: 1.5;
   text-align: right;
   color: #fff;
   float:right;
@@ -87,5 +89,5 @@ img {
 .wrapper {
 	max-width: 70em;
 	margin:auto;
-	padding: 0 .5em;
+	padding: 1em;
 }
