--- a/unit_8/css/style.css
+++ b/unit_8/css/style.css
@@ -26,7 +26,7 @@
 
 body {
 	background-color: #F5F5F5;
-	color: #8F8F8F;
+	color: #696969;
 	text-align: center;
 	text-transform: uppercase;
 	font-size: 18px;
@@ -50,7 +50,7 @@ nav {
 }
 
 a {
-  color: #8F8F8F;
+  color: #696969;
   text-decoration: none;
   transition: color .5s;
 }
@@ -78,7 +78,7 @@ img {
 	display:block;
   margin-top:2em;
 	margin-bottom:2em;
-	width: 80%;
+	width: 90%;
   border: 10px;
 	box-shadow: .5em .5em .5em #8F8F8F;
 }
@@ -86,18 +86,21 @@ img {
 .preview {
     box-shadow: .5em .5em .5em #8F8F8F;
     float: left;
-    margin: 10%;
+    margin: 5%;
     margin-top:0;
-    width: 30%;
+    width: 40%;
 }
 
 .preview:hover {
-  opacity:0.5;;
-
+  opacity:0.5;
 }
 
 .intro {
   word-spacing: 5px;
+}
+
+.intro-small {
+	display: none;
 }
 
 #slogan {
@@ -105,15 +108,13 @@ img {
   font-size: 90px;
   line-height: 1.4;
   text-align: right;
-  color: #fff;
-  float:right;
-  margin:.5em 0;
-  padding: 0 .5em;
+  color: #000;
+  margin:.5em auto;
+  width: 90%;
 }
 
 #slogan * {
-	display:inline;
-  background: #000;
+	display:block;
 }
 
 .wrapper {
@@ -123,7 +124,7 @@ img {
 }
 
 article {
-  width: 80%;
+  width: 90%;
   margin: 1em auto;
   border: 2px solid;
   border-color:#8F8F8F;
@@ -142,6 +143,58 @@ article {
 }
 
 .col-2 {
-	float:left;
-	width:50%;
+  float:left;
+  width:50%;
+}
+
+@media only screen and (max-width: 768px) {
+	.intro {
+		display: none;
+	}
+
+	.intro-small {
+		display: block;
+    text-align: center;
+	}
+
+	.preview {
+		float:none;
+		width:90%;
+
+	}
+
+	h1 {
+	  font-family: 'Metrica-Regular';
+	  letter-spacing: 5px;
+	  font-size: 60px;
+	}
+
+	h2 {
+		font-size: 18px;
+	}
+
+	nav a {
+	display: block;
+	text-align: right;
+	margin: 0;
+	}
+
+	#slogan {
+	font-family: 'Abel', sans-serif;
+	font-size: 60px;
+	letter-spacing: 1px;
+	}
+
+  .col-2 {
+    float:none;
+    width:90%;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+	h1 {
+	  font-family: 'Metrica-Regular';
+	  letter-spacing: 5px;
+	  font-size: 40px;
+	}	
 }
