--- a/unit_8/css/style.css
+++ b/unit_8/css/style.css
@@ -173,12 +173,12 @@ article {
 		font-size: 18px;
 	}
 
-	nav a {
+/*	nav a {
 	display: block;
 	text-align: right;
 	margin: 0;
   padding: .5em;
-	}
+	}*/
 
 	#slogan {
 	font-family: 'Abel', sans-serif;
