--- a/unit_8/css/style.css
+++ b/unit_8/css/style.css
@@ -25,7 +25,7 @@
 * { margin:0 auto; padding:0; box-sizing:border-box; }
 
 body {
-	background-color: #F5F5F5;
+	background-color: #f6f6f6;
 	color: #696969;
 	text-align: center;
 	text-transform: uppercase;
